force-app/main/default/objects/BGBK__TransactionSettings__c/BGBK__TransactionSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Transaction Settings</label>
</CustomObject>