force-app/main/default/objects/BGBK__TransactionSettings__c/fields/BGBK__Allow_Transactions__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Allow_Transactions__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Transactions</label>
    <type>Checkbox</type>
</CustomField>