force-app/main/default/objects/BGBK__TransactionSettings__c/fields/BGBK__Distributable_Funds__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Distributable_Funds__c</fullName>
    <description>List of Fund Names that can be distributed from. Separate each Fund with a comma. eg. 123 456 780 001, 223 543 123 000</description>
    <label>Distributable Funds</label>
    <length>100</length>
    <type>Text</type>
</CustomField>