force-app/main/default/objects/BGBK__TransactionSettings__c/fields/BGBK__Limit_Refunds_to_Payments__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Limit_Refunds_to_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Limit Refunds to Payments</description>
    <label>Limit Refunds to Payments</label>
    <type>Checkbox</type>
</CustomField>