force-app/main/default/objects/BGBK__TransactionSettings__c/fields/BGBK__LossOverage_Fund__c.field-meta.xml
<CustomField>
    <fullName>BGBK__LossOverage_Fund__c</fullName>
    <label>Loss/Overage Fund</label>
    <length>25</length>
    <type>Text</type>
</CustomField>