force-app/main/default/objects/BGBK__TransactionSettings__c/fields/BGBK__Version__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Version__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Version</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>